# ytkiosk

./: HANDOFF.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  config.json  install.sh  pyproject.toml  simple-video-player.py  test_app.py  test_integration.py  yt-player.desktop
docs/: DEPENDENCIES.md  RELEASE.md
src/ytkiosk/: __init__.py  __main__.py  cli.py  deno.py  doctor.py  legacy.py
